2010-03-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Topo-sort top-level; eliminate redundant forward func decls.

	* maketime.c: Delete forward func decls; reorder
	top-level; do other whitespace and comment changes.
	* merger.c: Likewise.
	* partime.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcskeys.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmap.c: Likewise.
	* rcsrev.c: Likewise.
	* rcssyn.c: Likewise.
	* rcstime.c: Likewise.
	* rcsutil.c: Likewise.

2010-03-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Remove spurious debugging output.

	* rcsfnms.c [!HAVE_MKSTEMP] (homegrown_mkstemp):
	Remove debugging output.

2010-03-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Revise output for --help option.

	* ci.c (:help comment): Remove description blurb;
	use uppercase letters and a period; flatten/reorg a bit.
	* co.c (:help comment): Likewise.
	* ident.c (:help comment): Likewise.
	* merge.c (:help comment): Likewise.
	* rcs.c (:help comment): Likewise.
	* rcsclean.c (:help comment): Likewise.
	* rcsdiff.c (:help comment): Likewise.
	* rcsmerge.c (:help comment): Likewise.
	* rlog.c (:help comment): Likewise.

2010-03-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Topo-sort top-level; eliminate redundant forward func decls.

	* ci.c: Delete forward func decls; reorder top-level;
	do other whitespace and comment changes.
	(main): Move to end.
	* co.c: Likewise.
	* ident.c: Likewise.
	* merge.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsmerge.c: Likewise.
	* rlog.c: Likewise.

2010-03-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[sec] Use mktemp(1) instead of homegrown tmporary file naming.

	* rcsfreeze.sh (TMPLOG): Use mktemp(1); exit if not successful.

2010-03-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcsdiff: Refine "same-revision don't call diff" optimization.

	* rcsdiff.c (unique): New struct def.